--- a/index1.html
+++ b/index1.html
@@ -1,1 +1,75 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
 
+        nav {
+            background-color: #333;
+            overflow: hidden;
+        }
+
+        nav a {
+            float: left;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        nav a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
+        #content {
+            background-color: purple;
+            display: flex;
+            justify-content: space-between;
+            height: 100%;
+        }
+
+        #left-column, #middle-column, #right-column {
+            flex: 1;
+            padding: 10px;
+        }
+
+        #inner-division {
+            background-color: white;
+            padding: 15px;
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+
+    <nav>
+        <a href="#home">Button 1</a>
+        <a href="#about">Button 2</a>
+        <a href="#services">Button 3</a>
+        <a href="#contact">Button 4</a>
+    </nav>
+
+    <div id="content">
+        <div id="left-column">
+            Left Column Content
+        </div>
+        <div id="middle-column">
+            <div id="inner-division">
+                Middle Column Content
+            </div>
+        </div>
+        <div id="right-column">
+            Right Column Content
+        </div>
+    </div>
+
+</body>
+</html>
