sencond xhange by zyzy

--- a/index1.html
+++ b/index1.html
@@ -64,8 +64,8 @@
     <nav>
         <a href="index1.html">HTML1</a>
         <a href="index2.html">HTML2</a>
-        <a href="#services">HTML3</a>
-        <a href="#contact">HTML4</a>
+        <a href="#index3.html">HTML3</a>
+        <a href="#index4.html">HTML4</a>
     </nav>
 
     <div id="content">
