--- a/index4.html
+++ b/index4.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LAB 2 Rodriguez</title>
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+<body>
+    <header>MARYROSE</header>
 
+
+    <div class="container-fluid" >
+        <div class="row ">
+            <div class="d-flex flex-row">
+                <div class="col-lg-4" style="background-color: pink; padding-bottom: 5%; margin-top: 2%; width: 30%; margin-left: 2%;">
+                    <h3>This is Column 1</h3>
+                    <button class="btn btn-success" style="margin-top: 120%; margin-left: 40%;" >Click!</button>
+                </div>
+                <div class="col-lg-8" style="background-color: pink; padding-bottom: 5%; margin-top: 2%; width: 65%; margin-left: 2%;">
+                    <div class="row">
+                        <div class="col-lg-6 border border-2 border-dark" style="background-color: green; padding-bottom: 15%; width: 40%; margin-left: 6%; margin-bottom: 2%; margin-top: 5%;">
+                            <h3 style="text-align: center;"> MARYROSE </h3>
+                        </div>
+
+                        <div class="col-lg-6 border border-2 border-dark" style="background-color: green; padding-bottom: 15%; width: 42%; margin-left: 6%; margin-bottom: 2%; margin-top: 5%;">
+                            <h3 style="text-align: center;">Rein</h3>
+                        </div>
+                    </div>
+                        <div class="row">
+                        <div class="col-lg-6 border border-2 border-dark" style="background-color: green; padding-bottom: 15%; width: 41%; margin-left: 6%; margin-bottom: 2%; margin-top: 5%;">
+                            <h3 style="text-align: center;"> chinita</h3>
+                        </div>
+                        <div class="col-lg-6 border border-2 border-dark" style="background-color: green; padding-bottom: 15%; width: 43.3%; margin-left: 6%; margin-bottom: 2%; margin-top: 5%;">
+                            <h3 style="text-align: center;"> RODRIGUEZ</h3>
+                        </div>
+                        <button class="btn btn-success" style="margin-top: 3%; margin-left: 40%; width:20%;" >Click!</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer>RODRIGUEZ</footer>
+   
+</body>
+</html>
+<style>
+    header{
+        border: 1px solid black;
+        background-color: blue;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        text-align: center;
+    }
+
+    footer{
+        border: 1px solid black;
+        background-color: red;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        text-align: center;
+        margin-top: 20px;
+    }
+</style>
