commit by jastin

--- a/index2.html
+++ b/index2.html
@@ -1,1 +1,331 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Three Column Layout</title>
+<style>
+    /* CSS for the three-column layout */
+    .container {
+        display: flex;
+        justify-content: space-between;
+    }
+    .column {
+        width: 30%; /* Adjust as needed */
+        padding: 10px;
+        border: 1px solid #ccc;
+    }
+    nav {
+            background-color: #333;
+            overflow: hidden;
+        }
+
+        nav a {
+            float: left;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        nav a:hover {
+            background-color: #0d6ad4;
+            color: black;
+        }
+</style>
+</head>
+<body>
+    <nav>
+        <a href="index1.html">HTML 1</a>
+        <a href="index2.html">HTML 2</a>
+        <a href="index3.html">HTML 3</a>
+        <a href="index4.html">HTML 4</a>
+    </nav>
+
+
+<div class="container">
+    <div class="column">
+        <h2>Column 1</h2>
+        <p>This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+        This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.</p>
+    </div>
+    <div class="column">
+        <h2>Column 2</h2>
+        <p>This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+        This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.</p>
+    </div>
+    <div class="column">
+        <h2>Column 3</h2>
+        <p>This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+        This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.
+            This is the content of column 1.</p>
+    </div>
+</div>
+
+</body>
+</html>
 
