commit by jastin ivan

--- a/index2.html
+++ b/index2.html
@@ -137,6 +137,7 @@
             This is the content of column 1.
             This is the content of column 1.
             This is the content of column 1.</p>
+            <button onclick="alert('Button in Column 1 clicked')">Button 1</button>
     </div>
     <div class="column">
         <h2>Column 2</h2>
@@ -230,6 +231,7 @@
             This is the content of column 1.
             This is the content of column 1.
             This is the content of column 1.</p>
+            <button onclick="alert('Button in Column 2 clicked')">Button 2</button>
     </div>
     <div class="column">
         <h2>Column 3</h2>
@@ -323,6 +325,7 @@
             This is the content of column 1.
             This is the content of column 1.
             This is the content of column 1.</p>
+            <button onclick="alert('Button in Column 3 clicked')">Button 3</button>
     </div>
 </div>
 
