--- a/index3.html
+++ b/index3.html
@@ -59,7 +59,7 @@
       margin-bottom: 10px;
       background-color: #f0f0f0;
       padding: 50px;
-      height: 800px;
+      height: 600px;
       width: 300px;
     }
 
@@ -81,12 +81,17 @@
   </div>
   <div class="second-column">
     <div class="div1">
-      <p>Division 1</p>
+      <p>column1</p>
+      <button type="button" style="padding: 20px; margin-top: 210%;">Click Me!</button>
     </div>
+   
     <div class="div2">
-      <p>Division 2</p>
+      <p>column2</p>
+      <button type="button" style="padding: 20px; margin-top: 210%;" >Click Me!</button>
     </div>
+    
   </div>
+  x
 </div>
 
 </body>
